Fri Apr 10 12:17:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          3630 is not fixed yet

Thu Apr  9 11:01:26 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_nocopy_ut.cpp:
        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:

          There were compile errors on Linux and Solaris builds with
          previous attempt to fix octet sequence test on Windows. Now
          those custom build steps are done only on windows builds.

Wed Apr  8 12:45:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/NamingViewer/BindDialog.cpp
        * utils/NamingViewer/BindDialog.h
        * utils/NamingViewer/BindNewContext.cpp
        * utils/NamingViewer/BindNewContext.h
          Unicode fixes

Tue Apr  7 09:01:37 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Sequence_Unit_Tests/clean_tao_export.pl:
        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_nocopy_ut.cpp:
        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:

          Fixed a test that uses specialization of unbounded_value_sequence
          for CORBA::Octet on win32. This test requires that the above
          specialization is compiled into tests code and not imported from
          TAO.dll as it was done before.

Mon Apr  6 13:39:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added 3630 and 3567 has been fixed

        * tests/Bug_3630_Regression/*:
          Added new test for bugzilla 3630, thanks to Steve Ramsay
          <steve dot ramsay at caris dot com> for creating this test

Mon Apr  6 08:19:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/NamingViewer/BindDialog.cpp
        * utils/NamingViewer/BindDialog.h
        * utils/NamingViewer/BindNewContext.cpp
        * utils/NamingViewer/BindNewContext.h
          Fixed unicode compile errors
